- fixed invisible action in foldertree toolbar bug

--- a/htdocs/views/simple/style.css
+++ b/htdocs/views/simple/style.css
@@ -1718,7 +1718,9 @@ a.extern:after {
 	margin: 2px;
 	background-size: 16px 16px;
 }
-
+.spacer-top {
+	margin-top: 9px !important;
+}
 .mft-node-expander {
 	display: inline-block;
 	width: 18px;
